# short-form-video-accelerator

./: DEPLOYMENT.md  DEPLOYMENT_DIGITALOCEAN.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_RAILWAY.md  README.md  app.yaml  digitalocean-app.json  fly.toml  nixpacks.toml  railway.json  railway.toml
.do/: app.yaml
backend/: .env  Dockerfile  app-spec.yaml  app.yaml  config_production_env.sh  config_railway_env.sh  deploy.sh  deploy_railway.sh  fly.toml  pyproject.toml  railway.toml  requirements.txt  setup_api_keys.sh  setup_postgres.sh  setup_storage.sh  test_s3.py  verify_api_keys.py  verify_deployment.sh  verify_railway_env.py
backend/app/: config.py  database.py  database_postgres.py  database_switch.py  main.py  models.py
backend/app/api/: analytics.py  auth.py  content.py  router.py  users.py
backend/app/credentials/: google_credentials.json
backend/app/models/: templates.py
backend/app/services/: auth.py  billing.py  content_analysis.py  lambda_service.py  performance_analytics.py  storage.py  transcription.py  video_processing.py
backend/migrations/: create_tables.py
deployment/digitalocean/: README.md  app.spec.yaml  app.yaml  deploy.sh  nginx-config.yaml
frontend/: .env  Dockerfile  config_production_env.sh  config_railway_env.sh  deploy_railway.sh  index.html  package-lock.json  package.json  vite.config.js  vite.config.ts
frontend/src/: App.js  App.tsx  main.js  main.tsx  types.ts  vite-env.d.ts
frontend/src/context/: AuthContext.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: BrandSettingsPage.tsx  Dashboard.tsx  LoginPage.tsx  UploadPage.tsx  (+3 more)
(+6 files in other folders)
